hyperf/hyperf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperf
  labels:
    app: hyperf
  namespace: hyperf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hyperf
  template:
    metadata:
      labels:
        app: hyperf
    spec:
      containers:
      - name: hyperf
        image: 19840112/hyf:0.1
        ports:
        - containerPort: 9501
        volumeMounts:
        - name: hyperf-persistent-storage
          mountPath: /var/www
      volumes:
      - name: hyperf-persistent-storage
        persistentVolumeClaim:
          claimName: hyperf-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: hyperf
  namespace: hyperf
spec:
  selector:
    app: hyperf
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 9501
