hyperf/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyperf
  namespace: hyperf
spec:
  ingressClassName: "nginx"
  rules:
  - host: hy.errorstaff.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hyperf
            port:
              number: 80
